# advent-of-code

./: .mdl-style.rb  .mdlrc  README.md  pyproject.toml
.github/scripts/: setup-poetry.sh
.github/workflows/: ci.yaml
2015/days/1/: README.md
2015/days/10/: README.md
2015/days/11/: README.md
2015/days/12/: README.md
2015/days/13/: README.md
2015/days/14/: README.md
2015/days/15/: README.md
2015/days/16/: README.md
2015/days/2/: README.md
2015/days/3/: README.md
2015/days/4/: README.md
2015/days/5/: README.md
2015/days/6/: README.md
2015/days/7/: README.md
2015/days/8/: README.md
2015/days/9/: README.md
2020/days/1/: README.md
2020/days/2/: README.md
2020/days/3/: README.md
2020/days/4/: README.md
2020/days/5/: README.md
2020/days/6/: README.md
2020/days/7/: README.md
2020/days/8/: README.md
2020/days/9/: README.md
2021/days/1/: README.md
2021/days/10/: README.md
2021/days/11/: README.md
2021/days/12/: README.md
2021/days/13/: README.md
2021/days/14/: README.md
2021/days/2/: README.md
2021/days/3/: README.md
2021/days/4/: README.md
2021/days/5/: README.md
2021/days/6/: README.md
2021/days/7/: README.md
2021/days/8/: README.md
2021/days/9/: README.md
2022/days/1/: README.md
2022/days/2/: README.md
2022/days/3/: README.md
2022/days/4/: README.md
2022/days/5/: README.md
pysrc/py_aoc/: __init__.py
pysrc/py_aoc/y2015/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
pysrc/py_aoc/y2020/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
pysrc/py_aoc/y2021/: day1.py  day10.py  day11.py  day12.py  day13.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
pysrc/py_aoc/y2022/: day1.py  day2.py  day3.py  day4.py  day5.py
tests/: test_py_aoc.py
tests/y2015/: test_day1.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
tests/y2020/: test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
tests/y2021/: test_day1.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
tests/y2022/: test_day1.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py
