[tool.poetry]
name = "py-aoc"
version = "0.1.0"
description = ""
authors = ["Justin Wood <Callek@gmail.com>"]

packages = [
  { include = "py_aoc", from = "pysrc" }
]

[tool.poetry.scripts]
aoc = "py_aoc.main:main"
# 2015
aoc-2015-1 = "py_aoc.y2015.day1:main"
aoc-2015-2 = "py_aoc.y2015.day2:main"
aoc-2015-3 = "py_aoc.y2015.day3:main"
aoc-2015-4 = "py_aoc.y2015.day4:main"
aoc-2015-5 = "py_aoc.y2015.day5:main"
aoc-2015-6 = "py_aoc.y2015.day6:main"
# 2020
aoc-2020-1 = "py_aoc.y2020.day1:main"
aoc-2020-2 = "py_aoc.y2020.day2:main"
aoc-2020-3 = "py_aoc.y2020.day3:main"
aoc-2020-4 = "py_aoc.y2020.day4:main"
aoc-2020-5 = "py_aoc.y2020.day5:main"
aoc-2020-6 = "py_aoc.y2020.day6:main"
aoc-2020-7 = "py_aoc.y2020.day7:main"
aoc-2020-8 = "py_aoc.y2020.day8:main"
aoc-2020-9 = "py_aoc.y2020.day9:main"
# 2021
aoc-2021-1 = "py_aoc.y2021.day1:main"
aoc-2021-2 = "py_aoc.y2021.day2:main"
aoc-2021-3 = "py_aoc.y2021.day3:main"
aoc-2021-4 = "py_aoc.y2021.day4:main"
aoc-2021-5 = "py_aoc.y2021.day5:main"
aoc-2021-6 = "py_aoc.y2021.day6:main"
aoc-2021-7 = "py_aoc.y2021.day7:main"
aoc-2021-8 = "py_aoc.y2021.day8:main"
aoc-2021-9 = "py_aoc.y2021.day9:main"
aoc-2021-10 = "py_aoc.y2021.day10:main"
aoc-2021-11 = "py_aoc.y2021.day11:main"
aoc-2021-12 = "py_aoc.y2021.day12:main"
aoc-2021-13 = "py_aoc.y2021.day13:main"
# 2022
aoc-2022-1 = "py_aoc.y2022.day1:main"
aoc-2022-2 = "py_aoc.y2022.day2:main"
aoc-2022-3 = "py_aoc.y2022.day3:main"
aoc-2022-4 = "py_aoc.y2022.day4:main"
aoc-2022-5 = "py_aoc.y2022.day5:main"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.7"
black = "^22.10.0"
mypy = "^0.991"
pytest = "^7.2.0"
tox = "^3.27.1"
# Wrapt needed for pylint, via astroid
# for some reason poetry isn't installing
# it otherwise, not digging in right now
wrapt = ">=1.14,<2"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

# Pylint
[tool.pylint.main]
jobs = 0

[tool.pylint.design]
max-args = 7

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.logging]
logging-format-style = "new"

[tool.pylint."messages control"]
disable = [
  "logging-fstring-interpolation",
  "logging-format-interpolation",
  "logging-not-lazy",
  "line-too-long",
  "ungrouped-imports",
  "typecheck",
  "wrong-import-order",
  "wrong-import-position",
  "inconsistent-mro",
  "consider-using-f-string",
  "unspecified-encoding",
]

[tool.pylint.reports]
output-format = "colorized"

[tool.pylint.similarities]
min-similarity-lines = 10
